erDiagram
    APP_USERS ||--o| CUSTOMERS : "linked_to"
    CUSTOMERS ||--o{ RESERVATIONS : "has"
    SPACES ||--o{ RESERVATIONS : "reserved_in"
    APP_USERS ||--o{ AUDIT_LOGS : "performs"
    CUSTOMERS ||--o{ AUDIT_LOGS : "related_to"

    APP_USERS {
        uuid id PK
        string username
        string password_hash
        string role
        string status
        uuid customer_id FK
        timestamptz created_at
        timestamptz updated_at
    }

    CUSTOMERS {
        uuid id PK
        string full_name
        string email
        string phone
        string document_number
        boolean is_deleted
        timestamptz created_at
        timestamptz updated_at
    }

    SPACES {
        uuid id PK
        string name
        int capacity
        decimal base_hourly_rate
        time opening_time
        time closing_time
        string time_zone_id
        string status
        boolean is_deleted
        timestamptz created_at
        timestamptz updated_at
    }

    RESERVATIONS {
        uuid id PK
        string reservation_code
        uuid space_id FK
        uuid customer_id FK
        uuid created_by_user_id FK
        timestamptz start_time
        timestamptz end_time
        string status
        decimal base_amount
        decimal final_amount
        decimal refund_amount
        jsonb pricing_breakdown
        timestamptz cancelled_at
        timestamptz completed_at
        timestamptz created_at
        timestamptz updated_at
    }

    AUDIT_LOGS {
        uuid id PK
        string event_name
        string entity_name
        uuid entity_id
        uuid user_id FK
        uuid customer_id FK
        string action
        string message
        jsonb old_values
        jsonb new_values
        timestamptz created_at
    }
